[feat] simple VM
Description
vm.run as well as debug feature to print IP before running

--- a/.additional/editor/vscode/.vscode/settings.json
+++ b/.additional/editor/vscode/.vscode/settings.json
@@ -10,6 +10,8 @@
   "rust-analyzer.linkedProjects": [
     "./Cargo.toml"
   ],
+  // Specify which features flags to compile and check for
+  "rust-analyzer.cargo.features": ["debug"],
   "markdownlint.config": {
     "MD007": { "indent": 2 },
     "MD024": false,
